changes to paperbib

--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 
 github_username: dhawals1939
 gitlab_username: # your GitLab user name
-twitter_username: dhawals1939
+twitter_username: # old twitter
 linkedin_username: # your LinkedIn user name
 scholar_userid: VCfRKJwAAAAJ
 orcid_id: # your ORCID ID
@@ -82,7 +82,6 @@ pinterest_id: # your pinterest id
 publons_id: # your ID on Publons
 quora_username: # your Quora username
 research_gate_profile: # your profile on ResearchGate
-scholar_userid: qc6CJjYAAAAJ # your Google Scholar ID
 scopus_id: # your profile on Scopus
 semanticscholar_id: # your Semantic Scholar ID
 spotify_id: # your spotify id
@@ -94,7 +93,7 @@ whatsapp_number: # your WhatsApp number (full phone number in international form
 wikidata_id: # your wikidata id
 wikipedia_id: # your wikipedia id (Case sensitive)
 work_url: # work page URL
-x_username: # your X handle
+x_username: dhawals1939 # your X handle
 youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
 
